# sendfile

./: .cirrus.yml  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
src/: lib.rs
tests/: send_file.rs
tests/files/: .gitignore  lorem_ipsum_1.txt
